--- a/BuoySensorManager.Web/appsettings.json
+++ b/BuoySensorManager.Web/appsettings.json
@@ -5,5 +5,14 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "BuoySensorEcbAddress": "127.0.0.1",
+  "BuoySensorEcbPort": 9000,
+  "BuoyPacketPersistDuration": 60,
+  "BuoyPacketEjectionInterval": 5,
+  "WaveHeightAlertThreshold": 30,
+  "Buoy0Id": "BUOY-932C2B2B5FC8",
+  "Buoy1Id": "BUOY-3A367CF75EF3",
+  "Buoy2Id": "BUOY-40BF8778ADB7",
+  "Buoy3Id": "BUOY-7A2D0FA8EA74"
 }
