--- a/BuoySensorManager.Web/appsettings.json
+++ b/BuoySensorManager.Web/appsettings.json
@@ -14,5 +14,13 @@
   "Buoy0Id": "BUOY-932C2B2B5FC8",
   "Buoy1Id": "BUOY-3A367CF75EF3",
   "Buoy2Id": "BUOY-40BF8778ADB7",
-  "Buoy3Id": "BUOY-7A2D0FA8EA74"
+  "Buoy3Id": "BUOY-7A2D0FA8EA74",
+  "BuoySensorEcbPortCount": 4,
+  "Port0Name": "Not Set",
+  "Port1Name": "Not Set",
+  "Port2Name": "Not Set",
+  "Port3Name": "Not Set",
+  "Port4Name": "Not Set",
+  "Port5Name": "Not Set",
+  "Port6Name": "BUOY-BHBHBHBHB"
 }
