--- a/BuoySensorManager.Web/appsettings.json
+++ b/BuoySensorManager.Web/appsettings.json
@@ -16,11 +16,12 @@
   "Buoy2Id": "BUOY-40BF8778ADB7",
   "Buoy3Id": "BUOY-7A2D0FA8EA74",
   "BuoySensorEcbPortCount": 4,
-  "Port0Name": "Not Set",
-  "Port1Name": "Not Set",
-  "Port2Name": "Not Set",
-  "Port3Name": "Not Set",
-  "Port4Name": "Not Set",
+  "Port0Name": "BUOY-123456",
+  "Port1Name": "BUOY-569874",
+  "Port2Name": "BUOY-258963",
+  "Port3Name": "BUOY-852147",
+  "Port4Name": "Not Setdfgdfgdfg",
   "Port5Name": "Not Set",
-  "Port6Name": "BUOY-BHBHBHBHB"
+  "Port6Name": "BUOY-BHBHBHBHB",
+  "Port7Name": "Not Set"
 }
