--- a/BuoySensorManager.Ecb/BuoySensorManager.Ecb.csproj
+++ b/BuoySensorManager.Ecb/BuoySensorManager.Ecb.csproj
@@ -7,4 +7,9 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Extensions.Logging" Version="9.0.9" />
+    <PackageReference Include="Microsoft.Extensions.Logging.Console" Version="9.0.9" />
+  </ItemGroup>
+
 </Project>
