--- a/BuoySensorManager.Web/appsettings.json
+++ b/BuoySensorManager.Web/appsettings.json
@@ -8,20 +8,13 @@
   "AllowedHosts": "*",
   "BuoySensorEcbAddress": "127.0.0.255",
   "BuoySensorEcbPort": 9000,
+  "BuoySensorEcbPortCount": 4,
   "BuoyPacketPersistDuration": 60,
   "BuoyPacketEjectionInterval": 5,
-  "WaveHeightAlertThreshold": 30,
-  "Buoy0Id": "BUOY-932C2B2B5FC8",
-  "Buoy1Id": "BUOY-3A367CF75EF3",
-  "Buoy2Id": "BUOY-40BF8778ADB7",
-  "Buoy3Id": "BUOY-7A2D0FA8EA74",
-  "BuoySensorEcbPortCount": 4,
   "Port0Name": "BUOY-123456",
   "Port1Name": "BUOY-569874",
   "Port2Name": "BUOY-258963",
-  "Port3Name": "BUOY-852147",
-  "Port4Name": "Not Setdfgdfgdfg",
-  "Port5Name": "Not Set",
-  "Port6Name": "BUOY-BHBHBHBHB",
-  "Port7Name": "Not Set"
+  "Port3Name": "BUOY-852146",
+  "Port4Name": "Not Set",
+  "Port5Name": "BUOY-785423"
 }
