--- a/BuoySensorManager.Web/appsettings.json
+++ b/BuoySensorManager.Web/appsettings.json
@@ -5,16 +5,5 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*",
-  "BuoySensorEcbAddress": "127.0.0.255",
-  "BuoySensorEcbPort": 9000,
-  "BuoySensorEcbPortCount": 4,
-  "BuoyPacketPersistDuration": 60,
-  "BuoyPacketEjectionInterval": 5,
-  "Port0Name": "BUOY-123456",
-  "Port1Name": "BUOY-569874",
-  "Port2Name": "BUOY-258963",
-  "Port3Name": "BUOY-852146",
-  "Port4Name": "Not Set",
-  "Port5Name": "BUOY-785423"
+  "AllowedHosts": "*"
 }
